changes to home

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,8 +40,9 @@
   <div class="foot">
   <footer class="footer mt-auto py-3 bg-dark">
     <ul>
-    <li><a href="https://theclassicsponge.herokuapp.com/">© 2021, The Classic Sponge </a></li>
-    <li><a href="/tos">Terms of Service</a></li>
+    <li><a href="https://theclassicsponge.herokuapp.com/"> © 2021, The Classic Sponge </a></li>
+    <li> | </li>
+    <li><a href="/tos">Terms of Service </a></li>
     <div class="container">
     </div>
   </ul>
@@ -52,5 +53,20 @@
     .foot {
       text-align: center;
       list-style-type: none;
+      color: white;
+
+    }
+
+    ul {
+      list-style-type: none;
+    }
+
+    li {
+      float: left;
+      padding: 3px;
+    }
+
+    a:link {
+      text-decoration: none;
     }
   </style>
