began commands list

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,7 +40,8 @@
   <div class="foot">
   <footer class="footer mt-auto py-3 bg-dark">
     <ul>
-    <li><a href="https://theclassicsponge.herokuapp.com/">© 2021, The Classic Sponge </a></li>
+    <li class="copyright">© 2021</li>
+    <li><a href="https://theclassicsponge.herokuapp.com/"> The Classic Sponge </a></li>
     <li><a href="/tos">Terms of Service</a></li>
     <div class="container">
     </div>
@@ -51,6 +52,12 @@
   <style>
     .foot {
       text-align: center;
+      list-style-type: none;
+      color: rgba(255,255,255,.5);
+    }
+
+    .copyright {
+      color: rgba(255,255,255,.5);
       list-style-type: none;
     }
   </style>
