--- a/website/templates/site/commands.html
+++ b/website/templates/site/commands.html
@@ -7,6 +7,48 @@
 
 <h1>Commands Page</h1>
 
+<br>
+
+<table>
+    <tr>
+      <th>Commands</th>
+      <th>Description</th>
+      <th>Info</th>
+    </tr>
+    <tr>
+      <td>help</td>
+      <td>Displays a list of commands and a description of their function.</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td>help [command]</td>
+      <td>Displays detailed infomation about a command.</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td>mul</td>
+      <td>Multiplies two given integers. I.e. !mul 2 2 displays 4.</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td>add</td>
+      <td>Finds the sum of two given numbers. I.e. !add 2 1 displays 3.</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td>sub</td>
+      <td>Subtracts two given numbers. I.e. !sub 3 1 displays 2.</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td>kick @mention</td>
+      <td>Kick a user from the server.</td>
+      <td>N/A</td>
+    </tr>
+  </table>
+
+  <br>  
+
 <style>
     body {
         background-color: #212529;
@@ -15,6 +57,20 @@
     h1 {
         color: white;
     }
+
+    table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  color: white
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
 
 </style>
 
