--- a/website/templates/site/home.html
+++ b/website/templates/site/home.html
@@ -14,48 +14,53 @@
    </script>
 <br>
 <div id="section1">
-<div class="penguin">
-<img src="static/pablo-logo.png" alt="pablo logo" width= "200" height="200">
+    <div class="penguin">
+        <img src="static/pablo-logo.png" alt="pablo logo" width= "200" height="200">
+    </div>
+    <br>
+    <div class="title">
+        <h1>Pablo</h1>
+    </div>
+    <div class="intro">
+        <p>
+            A general purpose, server management bot. 
+            Pablo will help organise and moderate your server and add serveral utilites to users 
+            i.e find youtube videos, play music etc.
+        </p>
+    </div>  
 </div>
-<br>
-<div class="title">
-<h1>Pablo</h1>
-</div>
-<div class="intro">
-<p>
-A general purpose, server management bot. Pablo will help organise and moderate your server and add serveral utilites to users i.e find youtube videos, play music etc.
-</p>
-</div>
-</div>
-<div id="everything">
+
 <div id="section2">
-<h3>About Pablo</h3>
-<div class="about">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, repellendus! Ea iure modi totam iste illum ducimus nihil nesciunt autem deleniti minus, provident aliquid vel laboriosam tempora excepturi rerum odit!
-</p>
+    <h3>About Pablo</h3>
+    <div class="about">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Autem, repellendus! Ea iure modi totam iste illum ducimus nihil nesciunt autem deleniti minus, 
+            provident aliquid vel laboriosam tempora excepturi rerum odit!
+        </p>
+    </div>
 </div>
-</div>
+
 <div id="section3">
-<h3>Add Pablo to Your Server</h3>
-<div class="add_button">
-    <button type="button" class="button1"><a href="/addbot"> Add Pablo</a></button>
-</div>
-<div>
-<br>
+    <h3>Add Pablo to Your Server</h3>
+    <div class="add_button">
+        <button type="button" class="button1"><a href="/addbot"> Add Pablo</a></button>
+    </div>
 
-</div>
 </div>
 <br>
 
-<h3>Need Help?</h3>
-<p>Join Our Support Server</p>
-<div class="join_support">
+<div id="section4">
+    <h3>Need Help?</h3>
+    <p>Join Our Support Server</p>
+    <div class="join_support">
+        <br>
+        <button type="button" class="button2">Click to Join!</button>
+    </div>
+    </div>
+</div>
 <br>
-<button type="button" class="button2">Click to Join!</button>
-</div>
-</div>
-</div>
-<br>
+
 <style>
     body {
     background-color: #212529;
@@ -92,10 +97,6 @@ h3 {
   
 }
 
-.everything {
-    animation-name: else;
-    animation-duration: 2s;
-}
 
 .intro {
     width: 500px;
@@ -156,16 +157,19 @@ h3 {
     width: 100%;
     display: inline-block;
 }
+
 #section2 {
     height: 400px;
     width: 100%;
     display: inline-block;
 }
+
 #section3 {
     height: 400px;
     width: 100%;
     display: inline-block;
 }
+
 #section4 {
     height: 400px;
     width: 100%;
